feat: flying artifact rework